--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #5c96be;
+  overflow-x: hidden;
 }
 
 /********************  Header  ********************/
