--- a/style.css
+++ b/style.css
@@ -323,6 +323,44 @@ section {
   max-width: 30px;
 }
 
+
+/********************  Bounce CSS by https://codepen.io/bisaillonyannick/pen/pvZeGg  ********************/
+
+.bounce img {
+  -moz-animation: bounce 2.5s infinite;
+  -webkit-animation: bounce 2.5s infinite;
+  animation: bounce 2.5s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-10px);
+  }
+  60% {
+    transform: translateY(-10px);
+  }
+}
+
+/********************  Adapted from Bounce CSS by https://codepen.io/bisaillonyannick/pen/pvZeGg  ********************/
+
+.rotate {
+  -moz-animation: rotate 2.5s infinite;
+  -webkit-animation: rotate 2.5s infinite;
+  animation: rotate 2.5s infinite;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(180deg);
+  }
+}
+
 /********************  Footer  ********************/
 
 footer {
@@ -471,6 +509,8 @@ footer li a:hover {
 
   .section-title {
     margin-top: 75px;
+    margin-right: 4vw;
+    text-align: center;
   }
 
   #thelatest {
@@ -485,7 +525,6 @@ footer li a:hover {
 
   .section-title h2 {
     font-size: 3.5em;
-    text-align: center;
   }
 
   .articleSnippetDiv a, .trendingSnippetDiv a, .resultingSnippetDiv a, .editorpicks-section a {
